[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/UI/card_maker/IntSourceOption.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/custom/new_theme.tres" type="Theme" id=2]
[ext_resource path="res://objects/UI/card_maker/UnitVariableOption.gd" type="Script" id=3]
[ext_resource path="res://objects/UI/card_maker/TargetCalculationOption.gd" type="Script" id=4]
[ext_resource path="res://objects/UI/card_maker/bt_node_panels/BTNodeContainer.gd" type="Script" id=5]

[node name="ScrollContainer" type="ScrollContainer"]
margin_right = 304.0
margin_bottom = 48.0
rect_min_size = Vector2( 304, 192 )
theme = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 292.0
margin_bottom = 71.0
rect_min_size = Vector2( 292, 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 19.0
autowrap = true

[node name="IntSourceOption" type="OptionButton" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 292.0
margin_bottom = 46.0
script = ExtResource( 1 )

[node name="SpinBox" type="SpinBox" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 292.0
margin_bottom = 71.0

[node name="UnitVariableOption" type="OptionButton" parent="VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 292.0
margin_bottom = 98.0
script = ExtResource( 3 )

[node name="TargetCalculationOption" type="OptionButton" parent="VBoxContainer"]
visible = false
margin_top = 77.0
margin_right = 292.0
margin_bottom = 98.0
script = ExtResource( 4 )
